--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			rel="stylesheet"
 			href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
 		/>
+		<link rel="stylesheet" href="./assets/CSS/style.css" />
 		<title>Weather Dashboard</title>
 	</head>
 
@@ -26,10 +27,8 @@
 		<!-- max-width for ultra wide resolutions -->
 		<div class="container-fluid" style="max-width: 1400px">
 			<div class="row">
-				<aside class="col-lg-3 pb-3">
-					<h2 id="form-heading" class="mt-1 h3 form-label">
-						Search for a City:
-					</h2>
+				<aside class="col-lg-3 mt-3 pb-3">
+					<h2 id="form-heading" class="mb-2 form-label">Search for a City:</h2>
 					<form id="search-form" class="form">
 						<div class="form-inline form-group">
 							<div class="input-group w-100">
@@ -44,7 +43,7 @@
 								<div class="input-group-append w-100">
 									<button
 										type="submit"
-										class="btn search-button bg-primary rounded mt-3 text-white w-100"
+										class="btn search-button bg-primary rounded mt-3 mb-1 text-white w-100"
 										id="search-button"
 										aria-label="submit search"
 									>
@@ -61,7 +60,7 @@
 				<div class="col-lg-9 pb-3">
 					<section
 						id="today"
-						class="mt-3 border"
+						class="mt-3 p-2"
 						role="region"
 						aria-live="polite"
 					></section>
