--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					></section>
 					<section
 						id="forecast"
-						class="row mt-3"
+						class="mt-3"
 						role="region"
 						aria-live="polite"
 					></section>
